--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  background-color: black;
+}
 .main-heading {
   text-align: center;
   color: tomato;
@@ -12,7 +15,7 @@
 }
 .main-container {
   /* border: 1px solid green; */
-  min-height: 512px;
+  min-height:74vh;
   width: 100%;
   /* margin-top: 10px; */
   background-color: rgb(255, 255, 60);
@@ -78,11 +81,18 @@
 /* Media Queries */
 
 @media screen and (max-width:425px) {
+  .main-container {
+    /* border: 1px solid green; */
+    min-height:85vh;
+    width: 80vw;
+    /* margin-top: 10px; */
+    background-color: rgb(255, 255, 60);
+  }
   .main-heading {
     text-align: center;
-    height: 30px;
-    font-size: 1.3rem;
-  }
+    height: 40px;
+    font-size: 1.5rem;
+}
 #show-first>img{
     width:35vw;
     height:20vh;
@@ -93,10 +103,6 @@
 #first-text+span{
   font-size: 0.7rem;
 }
-#hit-text{
-  font-size : 0.6rem;
-  }
-  
 .main-container{
   height:auto;
   width:auto;
@@ -113,4 +119,7 @@
 #mosquito{
   width: 15vw;
 }
+#hit-text{
+  font-size : 0.6rem;
+  }
 }
